--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,7 @@ services:
   db:
     image: bitnami/mongodb:5.0.17
     volumes:
-      - mongodb_data:/bitnami/mongodb
+      - mongodb_data:/bitnami
     environment:
       MONGODB_ROOT_PASSWORD: root
       MONGODB_REPLICA_SET_MODE: primary
